# PMPP_Lossy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  README_from_jan_daniel.txt  config.h  presentation_link.txt
build_win/volren/Win32/Release_Pascal/: Bucky-32x32x32_8.ddv  snapshot-2021-01-08_22-16-40.pnm  some_numbers.txt
example_data/: Bucky-32x32x32_8.ddv
notes/: project_structure.md  todo.md
src/: CMakeLists.txt
src/common/inc/: helper_cuda.h  helper_string.h  helper_timer.h
src/v3/: readme.txt
src/volren/: BasicRenderer.cu  BasicRenderer.h  BasicRenderer_16.cu  BasicRenderer_32.cu  BasicRenderer_64.cu  BasicRenderer_8.cu  BasicSampler.h  CMakeLists.txt  CUDA_compress.h  CachedVolume.h  CompressRBUC.cpp  CompressRBUC.h  CompressedVolume.h  CudaIntrinsics.h  CudaRenderer.h  CudaTransferFunctions.h  OffsetVolume.h  RBUC8x8Sampler.h  Renderer.h  RendererRBUC8x8.cu  RendererRBUC8x8.h  RendererRBUC8x8_16.cu  RendererRBUC8x8_32.cu  RendererRBUC8x8_64.cu  RendererRBUC8x8_8.cu  RendererRBUC8x8_helper.h  arithcoder.h  global_defines.h  image.cpp  image.h  jpeg_image.cpp  jpeg_image.h  png_image.cpp  png_image.h  pnm_image.cpp  pnm_image.h  volumeReader.cpp  volumeReader.h  volumeRender.cpp  volumeRenderer_helper.h
